CreateGesture should use GetUniqueEventID when possible.

Creating GestureEvents with 0 for unique_touch_event_id_ causes problems
for RenderWidgetHostInputEventRouter. In TouchEmulation, CreateGesture
may be triggered for GestureShowPress and GestureLongPress, and these
events at present get a 0 value even though the correct
unique_touch_event_id is in fact available.

This CL modifies CreateGesture to set this value when it is available.
It also modifies TouchEmulator to ensure synthetic GesturePinch events
are also given appropriate touch event ids.

Bug: 867087
Change-Id: I86186b9766714bda624581c67a88722d5794d717
Reviewed-on: https://chromium-review.googlesource.com/1169528
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582685}
Former-commit-id: 861a8b2697787f4ace52605e053d0388c57b68f7